@@ -2,7 +2,7 @@
 #
 # ${R_HOME}/etc/Makeconf
 
-include $(R_HOME)/share/make/vars.mk
+include $(R_SHARE_DIR)/make/vars.mk
 
 BLAS_LIBS = @BLAS_LIBS@
 CC = @CC@
@@ -50,7 +50,7 @@ TCLTK_CPPFLAGS = @TCLTK_CPPFLAGS@
 TCLTK_LIBS = @TCLTK_LIBS@
 
 R_XTRA_CFLAGS = @R_XTRA_CFLAGS@
-R_XTRA_CPPFLAGS = @R_XTRA_CPPFLAGS@ -I$(R_HOME)/include
+R_XTRA_CPPFLAGS = @R_XTRA_CPPFLAGS@ -I$(R_INCLUDE)
 R_XTRA_CXXFLAGS = @R_XTRA_CXXFLAGS@
 R_XTRA_FFLAGS = @R_XTRA_FFLAGS@
 
