@@ -29,7 +29,7 @@ top_builddir = ..
 
 include $(top_builddir)/Makeconf
 
-Rsharedir = ${rhome}/share
+Rsharedir = ${rsharehome}
 Rlocaledir = $(Rsharedir)/locale
 
 mkinstalldirs = $(MKINSTALLDIRS)
@@ -264,7 +264,7 @@ uninstall-exec:
 uninstall-data: uninstall-data-@USE_NLS@
 uninstall-data-no:
 uninstall-data-yes:
-	catalogs='$(CATALOGS)'; \
+	@catalogs='$(CATALOGS)'; \
 	for cat in $$catalogs; do \
 	  cat=`basename $$cat`; \
 	  lang=`echo $$cat | sed -e 's/\.gmo$$//'`; \
