@@ -37,7 +37,7 @@ R_OPTS =
 all:
 	@(out=`echo "$(test-out)" | sed 's/ $$//g'`; \
 	  if test -n "$${out}"; then \
-	    $(MAKE) -f $(R_HOME)/share/make/tests.mk $(makevars) $${out}; \
+	    $(MAKE) -f $(R_SHARE_DIR)/make/tests.mk $(makevars) $${out}; \
 	  fi)
 
 clean:
