@@ -60,9 +60,16 @@ INSTALLATION
 	64-bit OSes (but not ia64).  The use of lib/lib64 can be
 	overridden by the new variable LIBnn.
 
-    o	The default installation directory is now ${prefix}/${LIBnn},
-	/usr/local/lib64 on most 64-bit Linux OSes and /usr/local/lib
+    o	The default installation directory is now ${prefix}/${LIBnn}/R,
+	/usr/local/lib64/R on most 64-bit Linux OSes and /usr/local/lib/R
 	elsewhere.
+
+    o	It is now possible to install the share directory other than to
+	${libdir}/share by specifying --datadir when configuring:
+	see the R-admin manual.
+
+	Similarly, the installation location for the include directory
+	can be specified by specifying --includedir.  
 
 
 BUG FIXES
